feat: add initial ipod integration
